--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <p>pull no github</p>
+        <img src="https://img.freepik.com/fotos-gratis/lapis-preto-encontra-se-em-fundo-isolado_87790-428.jpg?w=1060" alt="teste de logotipo">
 
     </header>
     <main></main>
