ajuste do cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <header>
-        <p>Katanas Arraia</p>
-        <img src="https://img.freepik.com/fotos-gratis/lapis-preto-encontra-se-em-fundo-isolado_87790-428.jpg?w=1060" alt="teste de logotipo">
+        <div id="logo">
+            <img id="logotipo" src="images/Logotipo_1.jpg" alt="Logotipo da Katanas Arraia">
+        </div>
+
+        <ul id="links--list">
+            <li class="link-box"><a id="link--referencias" href="#">Referências</a></li>
+            <li class="link-box"><a id="link--filaEspera" href="#">Fila de espera</a></li>
+            <li class="link-box"><a id="link--precos" href="#">Preços</a></li>
+        </ul>
 
     </header>
     <main></main>
