Ajustes no cabeçalho e inicio da main

--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
             <img id="logotipo" src="images/Logotipo_1.jpg" alt="Logotipo da Katanas Arraia">
         </div>
 
-        <ul id="links--list">
-            <li class="link-box"><a id="link--referencias" href="#">Referências</a></li>
-            <li class="link-box"><a id="link--filaEspera" href="#">Fila de espera</a></li>
-            <li class="link-box"><a id="link--precos" href="#">Preços</a></li>
-        </ul>
+        <nav class="nav-links">
+            <ul id="links--list">
+                <li class="link-box"><a id="link--referencias" href="#">Referências</a></li>
+                <li class="link-box"><a id="link--filaEspera" href="#">Fila de espera</a></li>
+                <li class="link-box"><a id="link--precos" href="#">Preços</a></li>
+            </ul>
+        </nav>
 
     </header>
-    <main></main>
+    <section id="formulario">
+        <h2 class="subtitle">As melhores Katanas artesanais do Brasil</h2>
+        <form>
+            # ver a possibilidade de colocar essa section dentro da header pra alinhar ao centro
+        </form>
+    </section>
     <footer></footer>       
 </body>
 <script src="./scripts.js"></script>
