--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     </header>
     <section id="formulario">
         <h2 class="subtitle">As melhores Katanas artesanais do Brasil</h2>
-        <form>
-            # ver a possibilidade de colocar essa section dentro da header pra alinhar ao centro
+        <form id="formulario" class="formulario">
+            <input id="campo--email" type="email" placeholder="Inscreva seu e-mail" required="">
+            <input class="btn" id="botao--submit" type="submit" value="Inscrever-se">
         </form>
     </section>
+    <div class="conteiner">
+        <section><p>teste</p></section>
+        <section><p>#</p></section>
+        <section><p>#</p></section>
+    </div>
     <footer></footer>       
 </body>
 <script src="./scripts.js"></script>
