inseridas as características

--- a/index.html
+++ b/index.html
@@ -29,11 +29,41 @@
             <input class="btn" id="botao--submit" type="submit" value="Inscrever-se">
         </form>
     </section>
+
     <div class="conteiner">
-        <section><p>teste</p></section>
-        <section><p>#</p></section>
-        <section><p>#</p></section>
+        <section id="caracteristicas">
+            <div class="grid">
+                <i>
+                    <img class="icon" src="images/ninja_1.png" alt="icone de ninja">
+                </i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugiat quis voluptatem non, eius ad ipsa ea consequatur incidunt vel sit est cumque amet. Est, repellat? Debitis possimus a dolor?</p>
+            </div>
+          
+            <div class="grid">
+                <i>
+                    <img class="icon" src="images/samuraiAjoelhado.jpg" alt="icone de samurai ajoelhado">
+                </i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugiat quis voluptatem non, eius ad ipsa ea consequatur incidunt vel sit est cumque amet. Est, repellat? Debitis possimus a dolor?</p>
+            </div>
+
+            <div class="grid">
+                <i>
+                    <img class="icon" src="images/samurai-g178c29448_640.png" alt="icone de samurai">
+                </i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fugiat quis voluptatem non, eius ad ipsa ea consequatur incidunt vel sit est cumque amet. Est, repellat? Debitis possimus a dolor?</p>
+            </div>
+                        
+        </section>
+
+        <section class="video">
+            <iframe width="840px" height="480px" src="https://www.youtube.com/embed/KahFDAARyFo" title="KATANA de ferro de construção - Rebar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+        </section>
+
+        <section>
+            <p>#</p>
+        </section>
     </div>
+
     <footer></footer>       
 </body>
 <script src="./scripts.js"></script>
