criação das divs de preço

--- a/index.html
+++ b/index.html
@@ -59,8 +59,39 @@
             <iframe width="840px" height="480px" src="https://www.youtube.com/embed/KahFDAARyFo" title="KATANA de ferro de construção - Rebar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </section>
 
-        <section>
-            <p>#</p>
+        <section class="pricing">
+            <div id="preco--katana" class="pacote">
+                <h3 class="produto">KATANA</h3>
+                <h3 class="preco">R$ 600,00</h3>
+                <ul class="conteudo">
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem teste ipsum dolor sit amet</li>
+                </ul>
+                <button id="seleciona--katana" class="btn">Selecionar</button>
+            </div>
+
+            <div id="preco--wakizashi" class="pacote">
+                <h3 class="produto">Wakizashi</h3>
+                <h3 class="preco">R$ 400,00</h3>
+                <ul class="conteudo">
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem teste ipsum dolor sit amet</li>
+                </ul>
+                <button id="seleciona--wakizashi" class="btn">Selecionar</button>
+            </div>
+
+            <div id="preco--kit" class="pacote">
+                <h3 class="produto">Kit</h3>
+                <h3 class="preco">R$ 900,00</h3>
+                <ul class="conteudo">
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem, ipsum dolor sit amet</li>
+                    <li class="item--pacote">Lorem teste ipsum dolor sit amet</li>
+                </ul>
+                <button id="seleciona--kit" class="btn">Selecionar</button>
+            </div>
         </section>
     </div>
 
