Ajustes nos links
Preparando a página para ficar responsiva

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <nav class="nav-links">
             <ul id="links--list">
-                <li class="link-box"><a id="link--referencias" href="#">Referências</a></li>
-                <li class="link-box"><a id="link--filaEspera" href="#">Fila de espera</a></li>
-                <li class="link-box"><a id="link--precos" href="#">Preços</a></li>
+                <li class="link-box"><a class="link-box--item" id="link--referencias" href="#">Referências</a></li>
+                <li class="link-box"><a class="link-box--item" id="link--filaEspera" href="#">Fila de espera</a></li>
+                <li class="link-box"><a class="link-box--item" id="link--precos" href="#">Preços</a></li>
             </ul>
         </nav>
 
@@ -56,7 +56,7 @@
         </section>
 
         <section class="video">
-            <iframe width="840px" height="480px" src="https://www.youtube.com/embed/KahFDAARyFo" title="KATANA de ferro de construção - Rebar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+            <iframe src="https://www.youtube.com/embed/KahFDAARyFo" title="KATANA de ferro de construção - Rebar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
         </section>
 
         <section class="pricing">
